--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 h1{
   text-align: center;
   color: whitesmoke;
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .caixanuncio{
   background-color: #111;
-  border-radius: 4px;
+  border-radius: 20px;
   color: #b2b2b2;
   padding: 25px 30px;
   margin: 15px 50px;
@@ -16,12 +18,13 @@ button{
 }
 span{
   color: #febe01;
+  text-transform: uppercase;
 }
 h2 {
   color:#b2b2b2;
 }
 body{
-  background-color: grey;
+  background-color: rgb(39, 39, 39);
   font-family: Arial, Helvetica, sans-serif;
 }
 .corveiculos{
